--- a/requirements.txt
+++ b/requirements.txt
@@ -5,3 +5,95 @@ gunicorn==20.1.0
 psycopg2==2.9.9
 sqlparse==0.4.4
 whitenoise==6.5.0
+aiohttp==3.8.5
+aiosignal==1.3.1
+asgiref==3.7.2
+asttokens==2.4.0
+async-timeout==4.0.3
+attrs==23.1.0
+backcall==0.2.0
+bitarray==2.8.1
+cachetools==5.3.1
+certifi==2023.7.22
+charset-normalizer==3.2.0
+colorama==0.4.6
+comm==0.1.4
+contourpy==1.1.1
+cycler==0.11.0
+cytoolz==0.12.2
+debugpy==1.8.0
+decorator==5.1.1
+Django==5.0
+eth-abi==4.2.1
+eth-account==0.9.0
+eth-hash==0.5.2
+eth-keyfile==0.6.1
+eth-keys==0.4.0
+eth-rlp==0.3.0
+eth-typing==3.4.0
+eth-utils==2.2.1
+executing==1.2.0
+fonttools==4.42.1
+frozenlist==1.4.0
+google-auth==2.23.2
+google-auth-oauthlib==1.1.0
+gspread==5.11.3
+hexbytes==0.3.1
+idna==3.4
+ipykernel==6.25.2
+ipython==8.15.0
+jedi==0.19.0
+jsonschema==4.19.1
+jsonschema-specifications==2023.7.1
+jupyter_client==8.3.1
+jupyter_core==5.3.1
+kiwisolver==1.4.5
+lru-dict==1.2.0
+matplotlib==3.8.0
+matplotlib-inline==0.1.6
+multidict==6.0.4
+nest-asyncio==1.5.8
+numpy==1.26.0
+oauthlib==3.2.2
+packaging==23.1
+parsimonious==0.9.0
+parso==0.8.3
+pickleshare==0.7.5
+Pillow==10.0.1
+platformdirs==3.10.0
+plotly==5.17.0
+prompt-toolkit==3.0.39
+protobuf==4.24.3
+psutil==5.9.5
+pure-eval==0.2.2
+pyasn1==0.5.0
+pyasn1-modules==0.3.0
+pycryptodome==3.19.0
+Pygments==2.16.1
+pyparsing==3.1.1
+python-dateutil==2.8.2
+pyunormalize==15.0.0
+pywin32==306
+pyzmq==25.1.1
+referencing==0.30.2
+regex==2023.8.8
+requests==2.31.0
+requests-oauthlib==1.3.1
+rlp==3.0.0
+rpds-py==0.10.3
+rsa==4.9
+six==1.16.0
+sqlparse==0.4.4
+stack-data==0.6.2
+tenacity==8.2.3
+toolz==0.12.0
+tornado==6.3.3
+traitlets==5.10.0
+ttkthemes==3.2.2
+typing_extensions==4.8.0
+tzdata==2023.3
+urllib3==2.0.5
+wcwidth==0.2.6
+web3==6.10.0
+websockets==11.0.3
+yarl==1.9.2
